--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Tech Taiks by RJ</title>
-    <link rel="icon" href="/img/logo.png" />
+    <link rel="icon" href="/my-page-master1/img/logo.png" />
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -11,7 +11,7 @@
     />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/dist/css/main.css" />
+    <link rel="stylesheet" href="/my-page-master1/dist/css/main.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
