updated the links

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
           <div class="collapse navbar-collapse hs" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <button id="sub-page" class="nav-item bg-warning nav-link">
-                <a class="nav-item nav-link text-danger" href="/index.html"
+                <a
+                  class="nav-item nav-link text-danger"
+                  href="/my-page-master1/index.html"
                   >HOME
                 </a>
               </button>
@@ -79,24 +81,32 @@
                 onclick="myFunction()"
                 id="sub-page"
                 class="nav-item bg-warning nav-link"
-                href=" /subscribe.html"
+                href=" /my-page-master1/subscribe.html"
               >
-                <a class="nav-item nav-link text-danger" href="/subscribe.html"
+                <a
+                  class="nav-item nav-link text-danger"
+                  href="/my-page-master1/subscribe.html"
                   >SUBSCRIBE</a
                 >
               </button>
               <button id="sub-page" class="nav-item bg-warning nav-link">
-                <a class="nav-item nav-link text-danger" href="/videos.html"
+                <a
+                  class="nav-item nav-link text-danger"
+                  href="/my-page-master1/videos.html"
                   >VIDEOS</a
                 >
               </button>
               <button id="sub-page" class="nav-item bg-warning nav-link">
-                <a class="nav-item nav-link text-danger" href="/insta.html"
+                <a
+                  class="nav-item nav-link text-danger"
+                  href="/my-page-master1/insta.html"
                   >INSTAGRAM LINK</a
                 >
               </button>
               <button id="sub-page" class="nav-item bg-warning nav-link">
-                <a class="nav-item nav-link text-danger" href="/about.html"
+                <a
+                  class="nav-item nav-link text-danger"
+                  href="/my-page-master1/about.html"
                   >ABOUT</a
                 >
               </button>
