--- a/subscribe.html
+++ b/subscribe.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Tech Taiks by RJ</title>
-    <link rel="icon" href=" /img/logo.png" />
+    <link rel="icon" href=" /my-page-master1/img/logo.png" />
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -11,7 +11,7 @@
     />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href=" /dist/css/main.css" />
+    <link rel="stylesheet" href=" /my-page-master1/dist/css/main.css" />
 
     <link
       rel="stylesheet"
@@ -75,7 +75,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <button id="sub-page" class="nav-item bg-warning nav-link">
-              <a class="nav-item nav-link" href=" /index.html">HOME </a>
+              <a class="nav-item nav-link" href=" /my-page-master1/index.html"
+                >HOME
+              </a>
             </button>
             <button
               onclick="myFunction()"
@@ -83,18 +85,26 @@
               class="nav-item bg-warning nav-link"
               href=" /subscribe.html"
             >
-              <a class="nav-item nav-link" href=" /subscribe.html">SUBSCRIBE</a>
+              <a
+                class="nav-item nav-link"
+                href=" /my-page-master1/subscribe.html"
+                >SUBSCRIBE</a
+              >
             </button>
             <button id="sub-page" class="nav-item bg-warning nav-link">
-              <a class="nav-item nav-link" href=" /videos.html">VIDEOS</a>
+              <a class="nav-item nav-link" href=" /my-page-master1/videos.html"
+                >VIDEOS</a
+              >
             </button>
             <button id="sub-page" class="nav-item bg-warning nav-link">
-              <a class="nav-item nav-link" href=" /insta.html"
+              <a class="nav-item nav-link" href=" /my-page-master1/insta.html"
                 >INSTAGRAM LINK</a
               >
             </button>
             <button id="sub-page" class="nav-item bg-warning nav-link">
-              <a class="nav-item nav-link" href=" /about.html">ABOUT</a>
+              <a class="nav-item nav-link" href=" /my-page-master1/about.html"
+                >ABOUT</a
+              >
             </button>
           </div>
         </div>
@@ -183,7 +193,11 @@
     </div>
     <div class="row container">
       <div class="col-sm-4">
-        <img id="ad-img" class="ads" src=" /img/insta-images/asuslap.jpeg" />
+        <img
+          id="ad-img"
+          class="ads"
+          src=" /my-page-master1/img/insta-images/asuslap.jpeg"
+        />
         <button
           id="adsbut"
           onclick="adsfun()"
@@ -193,9 +207,12 @@
         </button>
       </div>
       <div class="col-sm-4">
-        <a target="_blank" href=" /img/insta-images/spects.jpeg">
+        <a
+          target="_blank"
+          href=" /my-page-master1/img/insta-images/spects.jpeg"
+        >
           <img
-            src=" /img/insta-images/spects.jpeg"
+            src=" /my-page-master1/img/insta-images/spects.jpeg"
             id="img-hide"
             class="ads-hide"
           />
@@ -208,9 +225,9 @@
 
     <section class="gal-sec">
       <div class="gallery">
-        <a target="_blank" href=" /img/insta-images/ports.jpeg">
+        <a target="_blank" href=" /my-page-master1/img/insta-images/ports.jpeg">
           <img
-            src=" /img/insta-images/ports.jpeg"
+            src=" /my-page-master1/img/insta-images/ports.jpeg"
             alt="Cinque Terre"
             width="600"
             height="400"
@@ -224,9 +241,12 @@
       </div>
 
       <div class="gallery">
-        <a target="_blank" href=" /img/insta-images/side view.jpeg">
+        <a
+          target="_blank"
+          href=" /my-page-master1/img/insta-images/side view.jpeg"
+        >
           <img
-            src=" /img/insta-images/side view.jpeg"
+            src=" /my-page-master1/img/insta-images/side view.jpeg"
             alt="Forest"
             width="600"
             height="400"
@@ -236,9 +256,12 @@
       </div>
 
       <div class="gallery">
-        <a target="_blank" href=" /img/insta-images/4GB varient.jpeg">
+        <a
+          target="_blank"
+          href=" /my-page-master1/img/insta-images/4GB varient.jpeg"
+        >
           <img
-            src=" /img/insta-images/4GB varient.jpeg"
+            src=" /my-page-master1/img/insta-images/4GB varient.jpeg"
             alt="Northern Lights"
             width="600"
             height="400"
@@ -248,9 +271,12 @@
       </div>
 
       <div class="gallery">
-        <a target="_blank" href=" /img/insta-images/bottom image.jpeg">
+        <a
+          target="_blank"
+          href=" /my-page-master1/img/insta-images/bottom image.jpeg"
+        >
           <img
-            src=" /img/insta-images/bottom image.jpeg"
+            src=" /my-page-master1/img/insta-images/bottom image.jpeg"
             alt="Mountains"
             width="600"
             height="400"
