--- a/videos.html
+++ b/videos.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Tech Taiks by RJ</title>
-    <link rel="icon" href=" /img/logo.png" />
+    <link rel="icon" href=" /my-page-master1/img/logo.png" />
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -11,7 +11,7 @@
     />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href=" /dist/css/main.css" />
+    <link rel="stylesheet" href=" /my-page-master1/dist/css/main.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -61,26 +61,36 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <button id="sub-page" class="nav-item bg-warning nav-link">
-              <a class="nav-item nav-link" href=" /index.html">HOME </a>
+              <a class="nav-item nav-link" href=" /my-page-master1/index.html"
+                >HOME
+              </a>
             </button>
             <button
               onclick="myFunction()"
               id="sub-page"
               class="nav-item bg-warning nav-link"
-              href=" /subscribe.html"
+              href=" /my-page-master1/subscribe.html"
             >
-              <a class="nav-item nav-link" href=" /subscribe.html">SUBSCRIBE</a>
+              <a
+                class="nav-item nav-link"
+                href=" /my-page-master1/subscribe.html"
+                >SUBSCRIBE</a
+              >
             </button>
             <button id="sub-page" class="nav-item bg-warning nav-link">
-              <a class="nav-item nav-link" href=" /videos.html">VIDEOS</a>
+              <a class="nav-item nav-link" href=" /my-page-master1/videos.html"
+                >VIDEOS</a
+              >
             </button>
             <button id="sub-page" class="nav-item bg-warning nav-link">
-              <a class="nav-item nav-link" href=" /insta.html"
+              <a class="nav-item nav-link" href=" /my-page-master1/insta.html"
                 >INSTAGRAM LINK</a
               >
             </button>
             <button id="sub-page" class="nav-item bg-warning nav-link">
-              <a class="nav-item nav-link" href=" /about.html">ABOUT</a>
+              <a class="nav-item nav-link" href=" /my-page-master1/about.html"
+                >ABOUT</a
+              >
             </button>
           </div>
         </div>
